# gsSandbox

./: CMakeLists.txt  README.md
data/test/: cube.xml  cube332.axl  cube333_pert.axl  cube443.axl  cube443_pert.axl  horseshoe.xml  lightnonconvex.axl
python/: convAnalysis.ipnb  convAnalysis.ipynb
python/.ipynb_checkpoints/: Convergence Analysis-checkpoint.ipynb
src/: CMakeLists.txt  OptParameterization.h  OptParameterization.hpp  OptParametrization.h  OptParametrization.hpp  algorithms.cpp  algorithms.h  genParam.cpp  gsOptParametrization.h  gsOptParametrization.hpp  optParam.cpp  sandbox.cpp  testParam.cpp
